development/ingress/ingress-be.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-broker-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
    - host: api-sapogo.deploy.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-broker-service
                port:
                  number: 8080
